# Paper-Mario-ReCut

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  n_aspMain.toml
lib/N64ModernRuntime/N64Recomp/include/: recomp.h
lib/N64ModernRuntime/librecomp/: CMakeLists.txt
lib/N64ModernRuntime/librecomp/include/librecomp/: game.hpp
lib/N64ModernRuntime/librecomp/src/: ai.cpp  flash.cpp  overlays.cpp  pi.cpp  recomp.cpp  rsp.cpp  ultra_translation.cpp  vi.cpp
lib/N64ModernRuntime/ultramodern/: CMakeLists.txt
lib/N64ModernRuntime/ultramodern/include/ultramodern/: config.hpp  renderer_context.hpp  ultramodern.hpp
lib/N64ModernRuntime/ultramodern/src/: audio.cpp  events.cpp  mesgqueue.cpp  scheduling.cpp  timer.cpp
lib/rt64/src/common/: rt64_replacement_database.cpp  rt64_timer.cpp
lib/rt64/src/d3d12/: rt64_d3d12.cpp  rt64_d3d12.h
lib/rt64/src/hle/: rt64_application.cpp  rt64_application.h  rt64_present_queue.cpp  rt64_rdp_tmem.cpp  rt64_rdp_tmem.h  rt64_rsp.cpp  rt64_shared_queue_resources.h  rt64_workload_queue.cpp
lib/rt64/src/render/: rt64_shader_library.cpp  rt64_shader_library.h
lib/rt64/src/vulkan/: rt64_vulkan.cpp  rt64_vulkan.h
rsp/: n_aspMain.cpp
src/: PaperMarioReCut.exe.manifest  PaperMarioReCut.rc  builtin_texture_pack.cpp  builtin_texture_pack.h  builtin_texture_pack_entries.inc  builtin_texture_resources.rc  main.cpp  paper_rt64_context.cpp  paper_rt64_context.h  paper_stubs.cpp  register_overlays.cpp
tools/PaperAtlasTool/: MainForm.cs  N64TextureAtlasEditor.csproj  Program.cs  README.md
